Added new Game and Player methods and tests. SinglePlayerGame's model almost finished